fix: Align text on uploads.html in two rows on all screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     color: #0f306e;
     }
 
-.uploadcontent {
+.upload-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
